fix scrollbars 2.0

--- a/public/advanced-responsive-video-embedder-public.css
+++ b/public/advanced-responsive-video-embedder-public.css
@@ -32,6 +32,7 @@
 	height: 100%;
 	width: 100%;
 	border: 0;
+	overflow: hidden !important;
 }
 
 .arve-promote-link {
